<resources>
    <string name="app_name">SmartW</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="facebook_appID">568307660028706</string>
    <string name="title_activity_test">test</string>
    <string name="title_activity_smart_wardrobe">SmartWardrobe</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_online__purchasing">Online_Purchasing</string>
    <string name="title_activity_smart_w__settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="add_image">Add Image</string>

    <string name="title_activity_display_image">DisplayImage</string>
    <string name="image_information">Image Information</string>

    <!-- Ruvinda -->
    <string name="add_textile_t1">Textile Type</string>
    <string name="add_textile_t2">Textile Variation</string>
    <string name="add_textile_t3">Material Type</string>
    <string name="add_textile_t4">Colour Type</string>
    <string name="add_textile_t5">Primary Colour</string>
    <string name="add_textile_t6">Secondary Colour</string>
    <string name="add_textile_t7">Tags</string>

    <string name="Add">Add</string>
    <string name="Cancel">Cancel</string>

    <string-array name="textileType">
        <item>Formal Wear</item>
        <item>Casual Wear</item>
        <item>Formal &amp; Casual Mixed Wear</item>
        <item>Party Wear</item>
        <item>Sports Wear</item>
        <item>Beach Wear</item>
        <item>Other</item>>
    </string-array>

    <string-array name="textileVariation">
        <item>Tshirt</item>
        <item>Shirt - Short Sleeves</item>
        <item>Shirt - Long Sleeves</item>
        <item>Kurtha</item>
        <item>Blazer</item>
        <item>Skinner</item>
        <item>Dennim</item>
        <item>Short</item>
        <item>Cotton Pant</item>
        <item>Formal Trouser</item>
        <item>Skirt</item>
        <item>Blouse</item>
        <item>Frock</item>

    </string-array>

    <string-array name="materialtype">
        <item>Cotten</item>
        <item>Linen</item>
        <item>Leather</item>
        <item>Silk</item>
        <item>Other</item>

    </string-array>

    <string-array name="colourType">
        <item>Plain</item>
        <item>Mixed</item>
    </string-array>

    <!--tags suggestions-->
    <string-array name="tagSugessions">
        <item>white</item>
        <item>red</item>
        <item>party</item>
        <item>tshirt</item>
        <item>trouser</item>
        <item>dennim</item>
    </string-array>

    <string name="list_item_tex_type">Type</string>
    <string name="list_item_tex_variation">Variation</string>
    <string name="list_item_tex_material">Material</string>
    <string name="list_item_tex_color_type">Colour Type</string>

    <!-- End Ruvinda -->

</resources>
